// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/Tag Snap Shot Chip 1`] = `
<span
  className="rounded-sm px-3 py-1 text-sm"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    {
      "backgroundColor": "#000",
      "color": "white",
      "opacity": 1,
    }
  }
>
  #
  chip
</span>
`;

exports[`ui/Tag Snap Shot button Chip 1`] = `
<button
  className="rounded-sm px-3 py-1 text-sm"
  onClick={[MockFunction]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    {
      "backgroundColor": "white",
      "color": "#000",
    }
  }
>
  #
  chip
</button>
`;

exports[`ui/Tag Snap Shot outline Chip 1`] = `
<span
  className="rounded-sm px-3 py-1 text-sm"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    {
      "backgroundColor": "white",
      "color": "#000",
    }
  }
>
  #
  chip
</span>
`;
